// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.eventsframework.entity_crud;
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option go_package = "953_events_api";

message EntityChangeDTO {
  google.protobuf.StringValue identifier = 1;
  google.protobuf.StringValue accountIdentifier = 2;
  google.protobuf.StringValue orgIdentifier = 3;
  google.protobuf.StringValue projectIdentifier = 4;
}
